[package]
name = "rust-actix-tasks"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Task Management REST API in Rust using Actix-web + SQLx (SQLite) with optional JWT, logging, and validation."
license = "MIT"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
dotenvy = "0.15"
thiserror = "1"
validator = { version = "0.18", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
